# AndroidBenchmarkNdkVsJdk

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/admin/testandroidapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Fibonacci.cpp  Fibonacci.h  Triangle.cpp  Triangle.h  gl_code.cpp  native-lib.cpp
app/src/main/java/com/example/admin/testandroidapp/: Fibonacci.java  GL2JNILib.java  GL2JNIView.java  MainActivity.java  MongoService.java  NativeGLView.java  OpenFTP.java  OpenGLRenderer.java  OpenGLView.java  Triangle.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/admin/testandroidapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
